1. 增加删除日志功能；
2. 模块管理增加迁移模块功能。

--- a/document/doc/0.1.8.md
+++ b/document/doc/0.1.8.md
@@ -2,6 +2,8 @@
 1. 依赖jar包升级；
 2. 中国行政区划表sys_china_area数据更新；
 3. 系统"模块管理"调整，增加"模块代码"属性，用以替代"模块ID"作为模块的唯一标识；
+4. 新增日志删除功能；
+5. 新增二级模块迁移功能；
 
 
 
@@ -63,4 +65,16 @@ ADD COLUMN `operate_module_code` varchar(50) CHARACTER SET utf8mb4 COLLATE utf8m
 UPDATE sys_log, sys_module SET sys_log.operate_module_code = sys_module.module_code WHERE sys_log.operate_module_id = sys_module.module_id;
 
 ALTER TABLE `sys_log` DROP COLUMN `operate_module_id`;
+```
+* 新增日志删除功能
+```sql
+INSERT INTO `sys_module_power`(`module_code`, `power_item`, `alias_name`) VALUES ('LOG', 'DELETE', '删除');
+set @deleteMpId = (select mp_id from sys_module_power where module_code = 'LOG' and power_item = 'DELETE');
+INSERT INTO `sys_module_power_method`(`mp_id`, `class_name`, `url`) VALUES (@deleteMpId, 'pers.chanus.yuntao.manager.controller.LogController', '/system/log/delete.do');
+INSERT INTO `sys_module_power_method`(`mp_id`, `class_name`, `url`) VALUES (@deleteMpId, 'pers.chanus.yuntao.manager.controller.LogController', '/system/log/clear.do');
+```
+* 新增二级模块迁移功能
+```sql
+set @updateMpId = (select mp_id from sys_module_power where module_code = 'MODULE' and power_item = 'UPDATE');
+INSERT INTO `sys_module_power_method`(`mp_id`, `class_name`, `url`) VALUES (@updateMpId, 'pers.chanus.yuntao.manager.controller.ModuleController', '/system/module/transfer.do');
 ```
