调整授权验证方式

--- a/document/doc/0.1.8.md
+++ b/document/doc/0.1.8.md
@@ -4,7 +4,10 @@
 3. 系统"模块管理"调整，增加"模块代码"属性，用以替代"模块ID"作为模块的唯一标识；
 4. 新增日志删除功能；
 5. 新增二级模块迁移功能；
-6. 更新前端UI。
+6. 更新前端UI；
+7. 新增图片处理工具类，二维码生成工具类，数字工具类，对象工具类；
+8. 新增和重构一些工具方法；
+9. 系统增加授权功能。
 
 
 
