增加授权鉴定定时任务，每天0点执行一次校验。

--- a/document/doc/0.1.8.md
+++ b/document/doc/0.1.8.md
@@ -5,7 +5,7 @@
 4. 新增日志删除功能；
 5. 新增二级模块迁移功能；
 6. 更新前端UI；
-7. 新增图片处理工具类，二维码生成工具类，数字工具类，对象工具类；
+7. 新增图片处理工具类，二维码生成工具类，数字工具类，对象工具类，字符工具类；
 8. 新增和重构一些工具方法；
 9. 系统增加授权功能。
 
