系统集成 Mybatis Plus 框架

--- a/document/doc/0.2.0.md
+++ b/document/doc/0.2.0.md
@@ -1,6 +1,9 @@
-### 一、0.1.9版本更新内容
-1. 增加微信公众号接口封装模块；
-2. 更新 sys_param 表结构，字段 modified_role_id 变更为 modified_role_code，数据由角色ID调整为角色代码；
+### 一、0.2.0版本更新内容
+1. 系统集成 MyBatis-Plus；
+
+2. 由于当前系统的 BaseMapper 与 MyBatis-Plus 中的 BaseMapper 重名，导致系统启动时会因为扫描到两个 BaseMapper 而报错，
+所以将当前系统的 BaseMapper 重命名为 SuperMapper，继承 MyBatis-Plus 中的 BaseMapper，SuperMapper 删掉一些不必要的接口；
+
 3. 更新 sys_operator 表结构和数据，字段 operator_role_id 变更为 operator_role_code，字段 master_role_id 变更为 master_role_code，新增 superior 字段，存储操作员角色的所有上级角色；
 4. 更新 view_login_user 视图，删除 user_type 字段，role_id 变更为 role_code，master_role_id 变更为 master_role_code；
 5. 更新 sys_role 表结构和数据，增加 superior 字段，存放角色的所有上级角色代码，包括自身
