--- a/document/doc/0.2.1.md
+++ b/document/doc/0.2.1.md
@@ -13,3 +13,5 @@ public class TestServiceImpl {
 3. 调整系统授权证书签名策略，改为RSA加密生成数字签名；
 
 4. 系统中 Date 替换为 LocalDateTime、LocalDate 和 LocalTime；
+
+5. LocalDateTimeUtils 工具类增加一些工具方法；
