--- a/document/doc/0.2.2.md
+++ b/document/doc/0.2.2.md
@@ -4,3 +4,5 @@
 2. 删除 yuntao-mybatis-generator 模块；
 
 3. 删除 yuntao-utils 模块，yuntao-utils 模块独立出去作为一个单独的项目进行维护；
+
+4. 删除 yuntao-weixin 模块，yuntao-weixin 模块独立出去作为一个单独的项目进行维护；
